# project

./: CMakeLists.txt  README.md
.cache/clangd/index/: Global.cpp.1BEBCC536DC5C10A.idx  Global.cpp.2053C5BCFB8C41A5.idx  Global.hpp.7D18965E6896172E.idx  Global.hpp.CD684E031683F862.idx  Lexer.hpp.37375553FF7C10A4.idx  Lexer.hpp.69BC3489DBC8059B.idx  calculation.cpp.2A570E8306444CC5.idx  calculation.cpp.E4925C314CA92AD1.idx  calculation.hpp.2F8487E6883C11C4.idx  calculation.hpp.4AC4D605DA05685E.idx  main.cpp.07014AFD5FF26728.idx  main.cpp.3F4A809C6488C24D.idx  parser.cpp.075F8820C43B80B7.idx  parser.cpp.7D78DEF547A16519.idx  parser.hpp.96CDCF0BC85C434A.idx  parser.hpp.B539EBDD273C983C.idx
include/: Global.hpp  Lexer.hpp  calculation.hpp  parser.hpp
src/: Global.cpp  calculation.cpp  main.cpp  parser.cpp  test.cpp
